Mobile alignment fixes

--- a/css/main.css
+++ b/css/main.css
@@ -55,12 +55,6 @@ a:visited {
   height: 140px;
 }
 
-.brick.large {
-  width: 300px;
-  height: 300px;
-  background: #333;
-}
-
 .app {
   display: block;
   margin: auto;
@@ -184,7 +178,7 @@ a:visited {
   body {
     background: url(/img/bg5.jpg);
     background-position: center center;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
   }
   
   .phone {
@@ -192,28 +186,30 @@ a:visited {
     box-shadow: none;
     background: none;
     margin: 0;
+    width: 100%;
+  }
+  
+  body.enabled {
+    background: #5E9FA3;  
   }
   
   .brick.small {
     width: 100px;
     height: 100px;
   }
-  .brick.large {
-    width: 240px;
-    height: 240px;
-  }
   
   .gridly {
-    position: relative;
-    width: 450px;
+    position: absolute;
+/*    width: 450px;*/
     margin: auto;
+    width: 100%;
   }
   
   .desc-full {
     top: 150px;
-    margin-left: 20px;
-    margin-right: 20px;
-    width: 360px;
+    padding-left: 16px;
+    padding-right: 16px;
+    width: 100%;
   }
   
 }
